bk_ida/gccida/g2/expand_return
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3510:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3531:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3535:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3668:40: error: use of undeclared identifier 'machine_mode'
v27 = expand_expr( ( tree)high, v26, ( machine_mode)*( ( unsigned __int8 *)v26 + 2), EXPAND_NORMAL); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3726:31: error: invalid suffix 'xmode' on integer constant
v12 = gen_reg_rtx( *(short *)0xmode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3736:31: error: invalid suffix 'orce' on integer constant
v13 = operand_sub*(short *)0xforce( result_val, v14 / v35, BLKmode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3736:7: error: use of undeclared identifier 'operand_sub'
v13 = operand_sub*(short *)0xforce( result_val, v14 / v35, BLKmode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3740:18: error: invalid suffix 'xmode' on integer constant
v15 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3746:18: error: invalid suffix 'xmode' on integer constant
v15 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3757:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3778:18: error: invalid suffix 'xmode' on integer constant
v39 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/stmt.c:3791:22: error: use of undeclared identifier 'machine_mode'
v41 = gen_reg_rtx( ( machine_mode)v39); 
                     ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_return/src/obj/stmt.o] Error 1
